Bug 390385 make sure that plugins don't get instantiated before the first Reflow of the objectframe, so that the first NPP_SetWindow call contains the right dimensions r+sr=bz